Squashed commit of the following:
commit 74139004fbc5142679c7c36646ddca9b78c20384
Merge: 6c067c0 cc7988f
Author: Chanbeador <ig.acevedoe@duocuc.cl>
Date:   Thu Jul 9 22:47:07 2026 -0400

    Merge pull request #38 from maxrodriguezduoc/ignacio-acevedo

    Se añade y configura Docker para microservicios

commit cc7988f20464f15d58349f4ec80fa2b88d17e1c8
Author: Ignacio Acevedo <ig.acevedoe@duocuc.cl>
Date:   Thu Jul 9 22:36:47 2026 -0400

    Se añade y configura Docker para microservicios

commit 6c067c09d357c84b268f15ab7fada0370fb3a59e
Merge: 1eb0c6b 65f0a01
Author: maxrodriguezduoc <max.rodriguez@duocuc.cl>
Date:   Sun Jun 28 19:31:10 2026 -0400

    Merge pull request #37 from maxrodriguezduoc/max-rodriguez

    implementacion swaggerConfig en todos los microservicios

commit 65f0a01586983118b70a59f9e4d9e8e1d4505545
Author: maxrodriguezduoc <max.rodriguez@duocuc.cl>
Date:   Sun Jun 28 19:30:18 2026 -0400

    implementacion swaggerConfig en todos los microservicios

commit 1eb0c6b30095d94d93bc472cd0fba31679b8a65d
Merge: af04980 423361c
Author: maxrodriguezduoc <max.rodriguez@duocuc.cl>
Date:   Sun Jun 28 19:03:47 2026 -0400

    Merge pull request #36 from maxrodriguezduoc/max-rodriguez

    se añade README

commit 423361c77de64d9c71d7ed4235a768ef1b162427
Author: maxrodriguezduoc <max.rodriguez@duocuc.cl>
Date:   Sun Jun 28 19:01:27 2026 -0400

    se añade README

commit af049805544eedfec77233b787fd6a7f91f926c7
Merge: bf7af15 47d31cd
Author: maxrodriguezduoc <max.rodriguez@duocuc.cl>
Date:   Sun Jun 28 16:07:12 2026 -0400

    Merge pull request #35 from maxrodriguezduoc/max-rodriguez

    correcciones

commit 47d31cd42b128420ad23cf1f0009371709489c72
Author: maxrodriguezduoc <max.rodriguez@duocuc.cl>
Date:   Sun Jun 28 15:32:54 2026 -0400

    correcciones

commit bf7af15496701eb1250ccd41c0719baad899ae80
Merge: 6225a5f c7e1fb8
Author: Chanbeador <ig.acevedoe@duocuc.cl>
Date:   Sat Jun 27 23:56:59 2026 -0400

    Merge pull request #34 from maxrodriguezduoc/ignaci